# Langchain_URL_Summarizer

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  text_summarization.ipynb
.github/workflows/: main.yml
