[project]
name = "summarization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.10",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "python-dotenv>=1.2.2",
    "transformers>=5.12.1",
    "unstructured>=0.23.1",
    "validators==0.28.1",
    "youtube-transcript-api>=1.2.4",
]
